@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class LibraryUI {
        ~ addMemberButton : JButton
        ~ membersButton : JButton
        + LibraryUI()
        {static} + main()
    }
  }
  

  namespace  {
    class LibraryUI.Clicklistener {
        + actionPerformed()
    }
  }
  

  namespace  {
    class ViewMembersUI {
        - OAPButton : JButton
        - basicButton : JButton
        - loyalButton : JButton
        - studentButton : JButton
        {static} + main()
        ~ ViewMembersUI()
    }
  }
  

  namespace  {
    class ViewMembersUI.Clicklistener {
        + actionPerformed()
        - getMembers()
    }
  }
  

  LibraryUI -up-|> javax.swing.JFrame
  LibraryUI +-down- LibraryUI.Clicklistener
  LibraryUI.Clicklistener .up.|> java.awt.event.ActionListener
  ViewMembersUI -up-|> javax.swing.JFrame
  ViewMembersUI +-down- ViewMembersUI.Clicklistener
  ViewMembersUI.Clicklistener .up.|> java.awt.event.ActionListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
